css/style.css
/*************************/
/* CSS Reset */
/*************************/
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/*************************/
/* General Styles */
/*************************/
html {
  scroll-behavior: smooth;
}

body {
  font-family: "Roboto", sans-serif;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

main {
  flex: 1;
}

/*************************/
/* Navbar */
/*************************/
.header {
  background-color: #1f2937;
}

.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-width: 960px;
  margin-inline: auto;
}

.logo {
  font-size: 24px;
  font-weight: 700;
  color: #f9faf8;
}

.nav-links {
  display: flex;
  list-style-type: none;
  font-size: 18px;
  color: #e5e7eb;
}

.nav-links li a {
  display: inline-block;
  text-decoration: none;
  color: inherit;
  padding: 24px 16px;
}

.nav-links li a:hover {
  background-color: #353e4b;
}

/*************************/
/* Hero Section */
/*************************/
.hero-section {
  background-color: #1f2937;
}

.hero {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 48px;
  max-width: 960px;
  margin-inline: auto;
  padding-block: 6rem;
}

.hero-info h1 {
  font-size: 48px;
  font-weight: 900;
  line-height: 1;
  color: #f9faf8;
  margin-bottom: 12px;
}

.hero-info p {
  font-size: 18px;
  color: #e5e7eb;
  line-height: 1.6;
  margin-bottom: 24px;
}

.hero-info button {
  display: inline-block;
  font-size: 18px;
  cursor: pointer;
  background-color: #3882f6;
  color: white;
  border: none;
  border-radius: 5px;
  padding: 8px 24px;
}

.hero-info button:hover {
  background-color: #3275dd;
}

.hero-img img {
  border-radius: 5px;
}

/*************************/
/* Info Section */
/*************************/
.info-section h2 {
  text-align: center;
  font-size: 36px;
  font-weight: 900;
  color: #1f2937;
  padding: 48px;
  margin-bottom: 16px;
}

.flex-info {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 64px;
  max-width: 960px;
  margin-inline: auto;
  margin-bottom: 128px;
}

.info-box {
  color: #1f2937;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 16px;
}

.info-box p {
  text-align: center;
  font-size: 18px;
}

.info-box img {
  border: 3px solid #3882f6;
  border-radius: 5px;
}

/*************************/
/* Quote Section */
/*************************/
.quote-section {
  background-color: #e5e7eb;
}

blockquote {
  max-width: 960px;
  margin-inline: auto;
  padding-block: 96px;
}

.quote-section blockquote .quote-body {
  font-size: 36px;
  font-weight: 300;
  font-style: italic;
  margin-bottom: 24px;
  color: #1f2937;
}

.quote-section blockquote .quote-cite {
  font-weight: 900;
  text-align: right;
  font-size: 24px;
}

/*************************/
/* CTA Section */
/*************************/
.cta-section {
  margin-block: 96px;
}

.cta-box {
  max-width: 960px;
  background-color: #3882f6;
  color: white;
  border-radius: 5px;
  margin-inline: auto;
  padding: 48px 96px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
}

.cta-box .button a {
  display: inline-block;
  text-decoration: none;
  color: white;
  font-size: 18px;
  cursor: pointer;
  background-color: transparent;
  border: 2px solid white;
  border-radius: 5px;
  padding: 8px 24px;
}

.cta-box .button a:hover {
  background-color: white;
  color: #3882f6;
}

/*************************/
/* Footer */
/*************************/
footer {
  background-color: #1f2937;
  padding-block: 32px;
}

.footer-box {
  max-width: 960px;
  color: #e5e7eb;
  font-size: 18px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 auto;
}

.footer-box a {
  color: currentColor;
  text-decoration: none;
}

.footer-box a:hover {
  text-decoration: underline;
}

